# Sentient-AI

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  MEMORY.md  MERGE_LOCK  PHASE_1_REPORT.md  PHASE_2_REPORT.md  README.md  SETUP.md  coverage-sentient-api-server.json  coverage-sentient-persona-identity_manager.json  coverage-sentient-prajna-frontal-harness_adapter.json  pyproject.toml
.clawhip/state/: prompt-submit.json
.githooks/: pre-push
.github/workflows/: ci.yml
.omc/: project-memory.json
.opencode/: oh-my-openagent.jsonc  opencode.json
.opencode/agent/: claude-code-worker.md  codex-worker.md  gemini-worker.md  state-sync.md
config/: inference_gateway.yaml  system.yaml
config/identity/: constitutional_core.yaml  developmental.yaml
doc/: ARCHITECTURE.md  CONVERSATION_SUMMARY.md  DESIGN_DECISIONS.md  PRD.md
docs/: DECISIONS.md  DEV_WORKFLOW.md  HANDOFF.md  PHASE_1_INVENTORY.md  SEASON_LOG.md  USAGE.md
docs/phases/: DOC_AUDIT_4c.md  FIRST_CONVERSATION_TRANSCRIPT.md  PERF_BASELINE_5.md  PHASE_10_D1_DIAGNOSIS.md  PHASE_10_D3_DIAGNOSIS.md  PHASE_10_D5_DIAGNOSIS.md  PHASE_10_D6_VERIFICATION.md  PHASE_10_D7_FRAMEWORK_TEST_REPORT.md  PHASE_3_5_REPORT.md  (+18 more)
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
gui/: index.html
scripts/: check_lazy_imports.sh  coverage_per_module.sh  guard_critical_files.sh  install_hooks.sh  kimaki-notify.sh  measure_performance.py  migrate-state.sh  pre-push  run_tests_safe.sh  safe_push.sh  setup-dev.sh  test-bridge-agents.sh
tests/: conftest.py  test_smoke.py
(+150 files in other folders)
